--- a/base_dir_project/rpc-api/src/main/resources/application.yaml
+++ b/base_dir_project/rpc-api/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 # 前環境共通で設定する値
 # サーバー設定
 server:
+  port: 8080
   servlet:
     context-path: /api
     forward-headers-strategy: NATIVE
@@ -8,7 +9,7 @@ server:
 logging:
   level:
     org:
-      springframework: WARN
+      springframework: DEBUG
 # spring設定
 spring:
   profiles:
